integrate api gateway with servives
